# esp32

./: .gitignore
BT/main/: CMakeLists.txt  main.cpp  testBle.cpp  testBle.hpp
CO2_BT/: CMakeLists.txt
CO2_BT/main/: CMakeLists.txt  Mhz19Uart.cpp  Mhz19Uart.hpp  consoleBle.cpp  consoleBle.hpp  main.cpp  tickTracker.hpp
RMT_tinkering/: CMakeLists.txt
RMT_tinkering/main/: CMakeLists.txt  Dht22Rmt.cpp  Dht22Rmt.hpp  Mhz19Uart.cpp  Mhz19Uart.hpp  main.cpp
Telegram/: CMakeLists.txt  HelloWorld.html  sdkconfig  sdkconfig.old
Telegram/BotSetup/: deleteMyCommands.cmd  getMyCommands.cmd  setMyCommands.cmd
Telegram/Main/: CMakeLists.txt  StaticObjects.cpp  StaticObjects.hpp  TelegramTask.cpp  TelegramTask.hpp  main.cpp
Telegram/Main/Console/: Console.cpp  Console.hpp
Telegram/Main/HttpServer/: HttpServerBase.cpp  HttpServerBase.hpp  HttpUriHandlerBase.cpp  HttpUriHandlerBase.hpp  HttpUriTest.cpp  HttpUriTest.hpp
Telegram/Main/HttpsClient/: HttpsClient.cpp  HttpsClient.hpp
Telegram/Main/System/: NVS.cpp  Task.cpp  Task.hpp
Telegram/Main/TelegramBot/: AnswerParserBase.cpp  AnswerParserBase.hpp  AnswerParserGetMe.cpp  AnswerParserGetMe.hpp  AnswerParserSend.cpp  AnswerParserSend.hpp  AnswerParserUpdate.cpp  AnswerParserUpdate.hpp  CjsonHandler.cpp  CjsonHandler.hpp  TelegramBot.cpp  TelegramBot.hpp  TelegramStructs.cpp  TelegramStructs.hpp
Telegram/Main/WiFiStation/: EventGroup.hpp  NVS.hpp  WiFiStation.cpp  WiFiStation.hpp
